# twitchTransFreeNeo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_CHECKLIST.md  build.py  build_nuitka.py  build_pyinstaller.py  config_sample.json  minimal_test.py  pyproject.toml  requirements.txt  run.py  simple_gui.py  standalone_gui.py  test_gui.py  test_startup.py  twitchTransFreeNext_詳細分析レポート.md  update方針.md  デバッグ手順.md
.claude/commands/: handoff.md  newplan.md
.github/workflows/: build.yml  build_nuitka.yml  build_pyinstaller.yml
.spec/: KNOWLEDGE.md  SPEC.md  TODO.md
HTML/OAuth/YouTube/: index.html
HTML/OAuth/twitch/: ttfn_oauth.html  ttfn_oauth_out.html
docs/: GITHUB_ACTIONS_SETUP_PLAN.md  setup_instructions.md
twitchTransFreeNeo/: __init__.py  main.py
twitchTransFreeNeo/core/: __init__.py  chat_monitor.py  database.py  translator.py  tts.py  youtube_auth.py  youtube_chat_monitor.py
twitchTransFreeNeo/gui/: __init__.py  chat_display.py  diagnostics_dialog.py  main_window.py  main_window_backup.py  main_window_flet.py  settings_dialog.py  settings_window.py  simple_chat_display.py  simple_main_window.py  simple_settings.py
twitchTransFreeNeo/utils/: __init__.py  config_manager.py  diagnostics.py  sound_manager.py
